[gd_scene load_steps=22 format=3 uid="uid://ddbpdjor6vt4"]

[ext_resource type="Script" path="res://Prefabs/Player.gd" id="1_il8ik"]
[ext_resource type="Texture2D" uid="uid://swy4t206iiwn" path="res://Sprites/axis.png" id="2_5e81f"]
[ext_resource type="Script" path="res://addons/StateMachine/StateMachine.gd" id="3_d387y"]
[ext_resource type="Script" path="res://addons/StateMachine/States/PlayerIdle.gd" id="4_1g4a4"]
[ext_resource type="Script" path="res://addons/StateMachine/States/PlayerMove.gd" id="5_3ufue"]
[ext_resource type="Script" path="res://addons/StateMachine/States/PlayerJump.gd" id="6_3r524"]
[ext_resource type="Script" path="res://addons/StateMachine/States/PlayerCreaming.gd" id="6_wwqe3"]
[ext_resource type="Script" path="res://addons/StateMachine/States/PlayerBoost.gd" id="7_bdueu"]
[ext_resource type="Script" path="res://addons/StateMachine/States/PlayerHover.gd" id="8_fmeui"]
[ext_resource type="Script" path="res://Prefabs/WheelAssem.gd" id="9_ufuem"]
[ext_resource type="PackedScene" uid="uid://br7xpbxhtb7iy" path="res://Models/Wheel.glb" id="10_wk4b8"]
[ext_resource type="Script" path="res://Prefabs/ActiveHitbox.gd" id="11_x3o7n"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_uyihh"]
height = 1.5

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ct8kc"]
radius = 0.4
height = 1.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_f6ufk"]
transparency = 1
shading_mode = 0
albedo_texture = ExtResource("2_5e81f")

[sub_resource type="QuadMesh" id="QuadMesh_1x0ib"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_245os"]
albedo_color = Color(0.262745, 0.262745, 0.262745, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_exwcl"]

[sub_resource type="ArrayMesh" id="ArrayMesh_yen11"]
_surfaces = [{
"aabb": AABB(-2.29226, -0.133518, -2.53595, 4.46079, 1.22384, 5.07191),
"format": 34896613377,
"index_count": 252,
"index_data": PackedByteArray(0, 0, 3, 0, 1, 0, 0, 0, 2, 0, 3, 0, 1, 0, 8, 0, 0, 0, 1, 0, 9, 0, 8, 0, 6, 0, 5, 0, 7, 0, 6, 0, 4, 0, 5, 0, 2, 0, 10, 0, 3, 0, 2, 0, 11, 0, 10, 0, 2, 0, 4, 0, 6, 0, 2, 0, 0, 0, 4, 0, 7, 0, 1, 0, 3, 0, 7, 0, 5, 0, 1, 0, 11, 0, 13, 0, 10, 0, 11, 0, 12, 0, 13, 0, 15, 0, 9, 0, 14, 0, 15, 0, 8, 0, 9, 0, 0, 0, 15, 0, 4, 0, 0, 0, 8, 0, 15, 0, 7, 0, 12, 0, 6, 0, 7, 0, 13, 0, 12, 0, 6, 0, 11, 0, 2, 0, 6, 0, 12, 0, 11, 0, 5, 0, 9, 0, 1, 0, 5, 0, 14, 0, 9, 0, 4, 0, 14, 0, 5, 0, 4, 0, 15, 0, 14, 0, 3, 0, 13, 0, 7, 0, 3, 0, 10, 0, 13, 0, 16, 0, 19, 0, 17, 0, 16, 0, 18, 0, 19, 0, 17, 0, 24, 0, 16, 0, 17, 0, 25, 0, 24, 0, 22, 0, 21, 0, 23, 0, 22, 0, 20, 0, 21, 0, 18, 0, 26, 0, 19, 0, 18, 0, 27, 0, 26, 0, 18, 0, 20, 0, 22, 0, 18, 0, 16, 0, 20, 0, 23, 0, 17, 0, 19, 0, 23, 0, 21, 0, 17, 0, 27, 0, 29, 0, 26, 0, 27, 0, 28, 0, 29, 0, 31, 0, 25, 0, 30, 0, 31, 0, 24, 0, 25, 0, 16, 0, 31, 0, 20, 0, 16, 0, 24, 0, 31, 0, 23, 0, 28, 0, 22, 0, 23, 0, 29, 0, 28, 0, 22, 0, 27, 0, 18, 0, 22, 0, 28, 0, 27, 0, 21, 0, 25, 0, 17, 0, 21, 0, 30, 0, 25, 0, 20, 0, 30, 0, 21, 0, 20, 0, 31, 0, 30, 0, 19, 0, 29, 0, 23, 0, 19, 0, 26, 0, 29, 0, 32, 0, 22, 0, 33, 0, 32, 0, 23, 0, 22, 0, 34, 0, 21, 0, 35, 0, 34, 0, 20, 0, 21, 0, 33, 0, 20, 0, 34, 0, 33, 0, 22, 0, 20, 0, 35, 0, 23, 0, 32, 0, 35, 0, 21, 0, 23, 0, 1, 0, 32, 0, 3, 0, 1, 0, 35, 0, 32, 0, 2, 0, 34, 0, 0, 0, 2, 0, 33, 0, 34, 0, 0, 0, 35, 0, 1, 0, 0, 0, 34, 0, 35, 0, 3, 0, 33, 0, 2, 0, 3, 0, 32, 0, 33, 0, 36, 0, 39, 0, 37, 0, 36, 0, 38, 0, 39, 0, 38, 0, 43, 0, 39, 0, 38, 0, 42, 0, 43, 0, 42, 0, 41, 0, 43, 0, 42, 0, 40, 0, 41, 0, 40, 0, 37, 0, 41, 0, 40, 0, 36, 0, 37, 0, 38, 0, 40, 0, 42, 0, 38, 0, 36, 0, 40, 0, 43, 0, 37, 0, 39, 0, 43, 0, 41, 0, 37, 0),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 44,
"vertex_data": PackedByteArray(171, 245, 28, 9, 228, 176, 0, 0, 171, 245, 191, 46, 228, 176, 0, 0, 171, 245, 28, 9, 26, 79, 0, 0, 171, 245, 191, 46, 26, 79, 0, 0, 255, 255, 28, 9, 228, 176, 0, 0, 255, 255, 191, 46, 228, 176, 0, 0, 255, 255, 28, 9, 26, 79, 0, 0, 255, 255, 191, 46, 26, 79, 0, 0, 67, 248, 143, 18, 255, 255, 0, 0, 67, 248, 75, 37, 255, 255, 0, 0, 67, 248, 75, 37, 0, 0, 0, 0, 67, 248, 143, 18, 0, 0, 0, 0, 103, 253, 143, 18, 0, 0, 0, 0, 103, 253, 75, 37, 0, 0, 0, 0, 103, 253, 75, 37, 255, 255, 0, 0, 103, 253, 143, 18, 255, 255, 0, 0, 0, 0, 28, 9, 228, 176, 0, 0, 0, 0, 191, 46, 228, 176, 0, 0, 0, 0, 28, 9, 26, 79, 0, 0, 0, 0, 191, 46, 26, 79, 0, 0, 83, 10, 28, 9, 228, 176, 0, 0, 83, 10, 191, 46, 228, 176, 0, 0, 83, 10, 28, 9, 26, 79, 0, 0, 83, 10, 191, 46, 26, 79, 0, 0, 151, 2, 143, 18, 255, 255, 0, 0, 151, 2, 75, 37, 255, 255, 0, 0, 151, 2, 75, 37, 0, 0, 0, 0, 151, 2, 143, 18, 0, 0, 0, 0, 187, 7, 143, 18, 0, 0, 0, 0, 187, 7, 75, 37, 0, 0, 0, 0, 187, 7, 75, 37, 255, 255, 0, 0, 187, 7, 143, 18, 255, 255, 0, 0, 129, 128, 197, 31, 3, 118, 0, 0, 129, 128, 22, 24, 3, 118, 0, 0, 129, 128, 22, 24, 251, 137, 0, 0, 129, 128, 197, 31, 251, 137, 0, 0, 53, 139, 255, 255, 66, 121, 0, 0, 53, 139, 0, 0, 66, 121, 0, 0, 53, 139, 255, 255, 188, 134, 0, 0, 53, 139, 0, 0, 188, 134, 0, 0, 226, 123, 255, 255, 66, 121, 0, 0, 226, 123, 0, 0, 66, 121, 0, 0, 226, 123, 255, 255, 188, 134, 0, 0, 226, 123, 0, 0, 188, 134, 0, 0)
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_uis14"]
resource_name = "Suspension_Cube_003"
_surfaces = [{
"aabb": AABB(-2.29226, -0.133518, -2.53595, 4.46079, 1.22384, 5.07191),
"attribute_data": PackedByteArray(255, 95, 255, 255, 255, 95, 255, 255, 255, 95, 255, 255, 255, 95, 255, 255, 255, 31, 255, 63, 255, 31, 255, 63, 255, 159, 255, 255, 255, 159, 255, 255, 255, 159, 255, 255, 255, 159, 255, 255, 255, 223, 255, 63, 255, 223, 255, 63, 255, 95, 255, 191, 255, 95, 255, 191, 255, 95, 255, 191, 255, 95, 255, 191, 255, 31, 255, 127, 255, 31, 255, 127, 255, 159, 255, 191, 255, 159, 255, 191, 255, 159, 255, 191, 255, 159, 255, 191, 255, 223, 255, 127, 255, 223, 255, 127, 255, 95, 255, 63, 255, 95, 255, 63, 255, 95, 255, 63, 255, 95, 255, 63, 255, 159, 255, 63, 255, 159, 255, 63, 255, 159, 255, 63, 255, 159, 255, 63, 255, 95, 255, 127, 255, 95, 255, 127, 255, 95, 255, 127, 255, 95, 255, 127, 255, 159, 255, 127, 255, 159, 255, 127, 255, 159, 255, 127, 255, 159, 255, 127, 255, 95, 255, 255, 255, 31, 255, 63, 255, 95, 0, 0, 255, 159, 255, 255, 255, 159, 0, 0, 255, 223, 255, 63, 255, 159, 255, 191, 255, 159, 255, 191, 255, 223, 255, 127, 255, 95, 255, 191, 255, 31, 255, 127, 255, 95, 255, 191, 255, 95, 255, 127, 255, 95, 255, 127, 255, 95, 255, 127, 255, 159, 255, 127, 255, 159, 255, 127, 255, 159, 255, 127, 255, 159, 255, 63, 255, 159, 255, 63, 255, 159, 255, 63, 255, 95, 255, 63, 255, 95, 255, 63, 255, 95, 255, 63, 255, 95, 255, 255, 255, 95, 255, 255, 255, 31, 255, 63, 255, 31, 255, 63, 255, 159, 255, 255, 255, 159, 255, 255, 255, 223, 255, 63, 255, 223, 255, 63, 255, 95, 255, 191, 255, 95, 255, 191, 255, 31, 255, 127, 255, 31, 255, 127, 255, 159, 255, 191, 255, 159, 255, 191, 255, 223, 255, 127, 255, 223, 255, 127, 255, 95, 255, 63, 255, 95, 255, 63, 255, 95, 255, 63, 255, 95, 255, 63, 255, 95, 255, 63, 255, 95, 255, 63, 255, 159, 255, 63, 255, 159, 255, 63, 255, 159, 255, 63, 255, 159, 255, 63, 255, 159, 255, 63, 255, 159, 255, 63, 255, 95, 255, 127, 255, 95, 255, 127, 255, 95, 255, 127, 255, 95, 255, 127, 255, 95, 255, 127, 255, 95, 255, 127, 255, 159, 255, 127, 255, 159, 255, 127, 255, 159, 255, 127, 255, 159, 255, 127, 255, 159, 255, 127, 255, 159, 255, 127, 255, 95, 255, 255, 255, 31, 255, 63, 255, 95, 0, 0, 255, 159, 255, 255, 255, 159, 0, 0, 255, 223, 255, 63, 255, 159, 255, 191, 255, 159, 255, 191, 255, 223, 255, 127, 255, 95, 255, 191, 255, 31, 255, 127, 255, 95, 255, 191, 255, 95, 255, 127, 255, 95, 255, 127, 255, 95, 255, 127, 255, 159, 255, 127, 255, 159, 255, 127, 255, 159, 255, 127, 255, 159, 255, 63, 255, 159, 255, 63, 255, 159, 255, 63, 255, 95, 255, 63, 255, 95, 255, 63, 255, 95, 255, 63, 255, 159, 34, 160, 255, 159, 34, 160, 255, 159, 34, 160, 255, 159, 34, 160, 255, 95, 34, 160, 255, 95, 34, 160, 255, 95, 34, 160, 255, 95, 34, 160, 255, 95, 105, 160, 255, 95, 105, 160, 255, 95, 105, 160, 255, 95, 105, 160, 255, 159, 105, 160, 255, 159, 105, 160, 255, 159, 105, 160, 255, 159, 105, 160, 255, 95, 255, 255, 255, 31, 255, 63, 255, 95, 0, 0, 255, 159, 255, 255, 255, 159, 0, 0, 255, 223, 255, 63, 255, 95, 255, 191, 255, 31, 255, 127, 255, 95, 255, 191, 255, 159, 255, 191, 255, 159, 255, 191, 255, 223, 255, 127, 255, 95, 255, 63, 255, 95, 255, 63, 255, 95, 255, 63, 255, 159, 255, 63, 255, 159, 255, 63, 255, 159, 255, 63, 255, 95, 255, 127, 255, 95, 255, 127, 255, 95, 255, 127, 255, 159, 255, 127, 255, 159, 255, 127, 255, 159, 255, 127),
"format": 34896613399,
"index_count": 252,
"index_data": PackedByteArray(0, 0, 18, 0, 6, 0, 0, 0, 12, 0, 18, 0, 7, 0, 40, 0, 1, 0, 7, 0, 43, 0, 40, 0, 35, 0, 31, 0, 39, 0, 35, 0, 27, 0, 31, 0, 13, 0, 46, 0, 19, 0, 13, 0, 49, 0, 46, 0, 16, 0, 24, 0, 32, 0, 16, 0, 4, 0, 24, 0, 37, 0, 11, 0, 23, 0, 37, 0, 29, 0, 11, 0, 51, 0, 55, 0, 47, 0, 51, 0, 53, 0, 55, 0, 62, 0, 44, 0, 58, 0, 62, 0, 42, 0, 44, 0, 5, 0, 61, 0, 25, 0, 5, 0, 41, 0, 61, 0, 38, 0, 54, 0, 34, 0, 38, 0, 57, 0, 54, 0, 33, 0, 50, 0, 17, 0, 33, 0, 52, 0, 50, 0, 28, 0, 45, 0, 10, 0, 28, 0, 59, 0, 45, 0, 26, 0, 60, 0, 30, 0, 26, 0, 63, 0, 60, 0, 22, 0, 56, 0, 36, 0, 22, 0, 48, 0, 56, 0, 64, 0, 76, 0, 68, 0, 64, 0, 72, 0, 76, 0, 69, 0, 104, 0, 65, 0, 69, 0, 107, 0, 104, 0, 97, 0, 91, 0, 103, 0, 97, 0, 85, 0, 91, 0, 73, 0, 110, 0, 77, 0, 73, 0, 113, 0, 110, 0, 74, 0, 80, 0, 92, 0, 74, 0, 66, 0, 80, 0, 99, 0, 71, 0, 79, 0, 99, 0, 87, 0, 71, 0, 115, 0, 119, 0, 111, 0, 115, 0, 117, 0, 119, 0, 126, 0, 108, 0, 122, 0, 126, 0, 106, 0, 108, 0, 67, 0, 125, 0, 81, 0, 67, 0, 105, 0, 125, 0, 102, 0, 118, 0, 96, 0, 102, 0, 121, 0, 118, 0, 93, 0, 114, 0, 75, 0, 93, 0, 116, 0, 114, 0, 86, 0, 109, 0, 70, 0, 86, 0, 123, 0, 109, 0, 84, 0, 124, 0, 90, 0, 84, 0, 127, 0, 124, 0, 78, 0, 120, 0, 98, 0, 78, 0, 112, 0, 120, 0, 131, 0, 95, 0, 135, 0, 131, 0, 101, 0, 95, 0, 139, 0, 89, 0, 143, 0, 139, 0, 83, 0, 89, 0, 134, 0, 82, 0, 138, 0, 134, 0, 94, 0, 82, 0, 142, 0, 100, 0, 130, 0, 142, 0, 88, 0, 100, 0, 9, 0, 129, 0, 21, 0, 9, 0, 141, 0, 129, 0, 15, 0, 137, 0, 3, 0, 15, 0, 133, 0, 137, 0, 2, 0, 140, 0, 8, 0, 2, 0, 136, 0, 140, 0, 20, 0, 132, 0, 14, 0, 20, 0, 128, 0, 132, 0, 144, 0, 153, 0, 147, 0, 144, 0, 150, 0, 153, 0, 152, 0, 165, 0, 154, 0, 152, 0, 163, 0, 165, 0, 164, 0, 161, 0, 167, 0, 164, 0, 158, 0, 161, 0, 157, 0, 148, 0, 159, 0, 157, 0, 146, 0, 148, 0, 151, 0, 156, 0, 162, 0, 151, 0, 145, 0, 156, 0, 166, 0, 149, 0, 155, 0, 166, 0, 160, 0, 149, 0),
"material": SubResource("StandardMaterial3D_exwcl"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 168,
"vertex_data": PackedByteArray(171, 245, 28, 9, 228, 176, 84, 213, 171, 245, 28, 9, 228, 176, 3, 86, 171, 245, 28, 9, 228, 176, 79, 193, 171, 245, 28, 9, 228, 176, 255, 191, 171, 245, 28, 9, 228, 176, 255, 191, 171, 245, 28, 9, 228, 176, 44, 65, 171, 245, 191, 46, 228, 176, 84, 213, 171, 245, 191, 46, 228, 176, 3, 86, 171, 245, 191, 46, 228, 176, 79, 193, 171, 245, 191, 46, 228, 176, 255, 191, 171, 245, 191, 46, 228, 176, 44, 65, 171, 245, 191, 46, 228, 176, 255, 255, 171, 245, 28, 9, 26, 79, 84, 213, 171, 245, 28, 9, 26, 79, 2, 214, 171, 245, 28, 9, 26, 79, 95, 10, 171, 245, 28, 9, 26, 79, 255, 191, 171, 245, 28, 9, 26, 79, 255, 191, 171, 245, 28, 9, 26, 79, 43, 193, 171, 245, 191, 46, 26, 79, 84, 213, 171, 245, 191, 46, 26, 79, 2, 214, 171, 245, 191, 46, 26, 79, 95, 10, 171, 245, 191, 46, 26, 79, 255, 191, 171, 245, 191, 46, 26, 79, 43, 193, 171, 245, 191, 46, 26, 79, 255, 255, 255, 255, 28, 9, 228, 176, 255, 191, 255, 255, 28, 9, 228, 176, 44, 65, 255, 255, 28, 9, 228, 176, 3, 86, 255, 255, 28, 9, 228, 176, 84, 213, 255, 255, 191, 46, 228, 176, 44, 65, 255, 255, 191, 46, 228, 176, 255, 255, 255, 255, 191, 46, 228, 176, 3, 86, 255, 255, 191, 46, 228, 176, 84, 213, 255, 255, 28, 9, 26, 79, 255, 191, 255, 255, 28, 9, 26, 79, 43, 193, 255, 255, 28, 9, 26, 79, 2, 214, 255, 255, 28, 9, 26, 79, 84, 213, 255, 255, 191, 46, 26, 79, 43, 193, 255, 255, 191, 46, 26, 79, 255, 255, 255, 255, 191, 46, 26, 79, 2, 214, 255, 255, 191, 46, 26, 79, 84, 213, 67, 248, 143, 18, 255, 255, 3, 86, 67, 248, 143, 18, 255, 255, 44, 65, 67, 248, 143, 18, 255, 255, 255, 191, 67, 248, 75, 37, 255, 255, 3, 86, 67, 248, 75, 37, 255, 255, 255, 191, 67, 248, 75, 37, 255, 255, 44, 65, 67, 248, 75, 37, 0, 0, 2, 214, 67, 248, 75, 37, 0, 0, 255, 255, 67, 248, 75, 37, 0, 0, 43, 193, 67, 248, 143, 18, 0, 0, 2, 214, 67, 248, 143, 18, 0, 0, 43, 193, 67, 248, 143, 18, 0, 0, 255, 255, 103, 253, 143, 18, 0, 0, 43, 193, 103, 253, 143, 18, 0, 0, 255, 255, 103, 253, 143, 18, 0, 0, 2, 214, 103, 253, 75, 37, 0, 0, 255, 255, 103, 253, 75, 37, 0, 0, 43, 193, 103, 253, 75, 37, 0, 0, 2, 214, 103, 253, 75, 37, 255, 255, 255, 191, 103, 253, 75, 37, 255, 255, 44, 65, 103, 253, 75, 37, 255, 255, 3, 86, 103, 253, 143, 18, 255, 255, 44, 65, 103, 253, 143, 18, 255, 255, 255, 191, 103, 253, 143, 18, 255, 255, 3, 86, 0, 0, 28, 9, 228, 176, 84, 213, 0, 0, 28, 9, 228, 176, 3, 86, 0, 0, 28, 9, 228, 176, 255, 191, 0, 0, 28, 9, 228, 176, 44, 65, 0, 0, 191, 46, 228, 176, 84, 213, 0, 0, 191, 46, 228, 176, 3, 86, 0, 0, 191, 46, 228, 176, 44, 65, 0, 0, 191, 46, 228, 176, 255, 255, 0, 0, 28, 9, 26, 79, 84, 213, 0, 0, 28, 9, 26, 79, 2, 214, 0, 0, 28, 9, 26, 79, 255, 191, 0, 0, 28, 9, 26, 79, 43, 193, 0, 0, 191, 46, 26, 79, 84, 213, 0, 0, 191, 46, 26, 79, 2, 214, 0, 0, 191, 46, 26, 79, 43, 193, 0, 0, 191, 46, 26, 79, 255, 255, 83, 10, 28, 9, 228, 176, 255, 191, 83, 10, 28, 9, 228, 176, 44, 65, 83, 10, 28, 9, 228, 176, 255, 191, 83, 10, 28, 9, 228, 176, 74, 193, 83, 10, 28, 9, 228, 176, 3, 86, 83, 10, 28, 9, 228, 176, 84, 213, 83, 10, 191, 46, 228, 176, 44, 65, 83, 10, 191, 46, 228, 176, 255, 255, 83, 10, 191, 46, 228, 176, 255, 191, 83, 10, 191, 46, 228, 176, 74, 193, 83, 10, 191, 46, 228, 176, 3, 86, 83, 10, 191, 46, 228, 176, 84, 213, 83, 10, 28, 9, 26, 79, 255, 191, 83, 10, 28, 9, 26, 79, 43, 193, 83, 10, 28, 9, 26, 79, 255, 191, 83, 10, 28, 9, 26, 79, 74, 10, 83, 10, 28, 9, 26, 79, 2, 214, 83, 10, 28, 9, 26, 79, 84, 213, 83, 10, 191, 46, 26, 79, 43, 193, 83, 10, 191, 46, 26, 79, 255, 255, 83, 10, 191, 46, 26, 79, 255, 191, 83, 10, 191, 46, 26, 79, 74, 10, 83, 10, 191, 46, 26, 79, 2, 214, 83, 10, 191, 46, 26, 79, 84, 213, 151, 2, 143, 18, 255, 255, 3, 86, 151, 2, 143, 18, 255, 255, 44, 65, 151, 2, 143, 18, 255, 255, 255, 191, 151, 2, 75, 37, 255, 255, 3, 86, 151, 2, 75, 37, 255, 255, 255, 191, 151, 2, 75, 37, 255, 255, 44, 65, 151, 2, 75, 37, 0, 0, 2, 214, 151, 2, 75, 37, 0, 0, 255, 255, 151, 2, 75, 37, 0, 0, 43, 193, 151, 2, 143, 18, 0, 0, 2, 214, 151, 2, 143, 18, 0, 0, 43, 193, 151, 2, 143, 18, 0, 0, 255, 255, 187, 7, 143, 18, 0, 0, 43, 193, 187, 7, 143, 18, 0, 0, 255, 255, 187, 7, 143, 18, 0, 0, 2, 214, 187, 7, 75, 37, 0, 0, 255, 255, 187, 7, 75, 37, 0, 0, 43, 193, 187, 7, 75, 37, 0, 0, 2, 214, 187, 7, 75, 37, 255, 255, 255, 191, 187, 7, 75, 37, 255, 255, 44, 65, 187, 7, 75, 37, 255, 255, 3, 86, 187, 7, 143, 18, 255, 255, 44, 65, 187, 7, 143, 18, 255, 255, 255, 191, 187, 7, 143, 18, 255, 255, 3, 86, 129, 128, 197, 31, 3, 118, 95, 10, 129, 128, 197, 31, 3, 118, 255, 191, 129, 128, 197, 31, 3, 118, 255, 191, 129, 128, 197, 31, 3, 118, 74, 10, 129, 128, 22, 24, 3, 118, 95, 10, 129, 128, 22, 24, 3, 118, 255, 191, 129, 128, 22, 24, 3, 118, 255, 191, 129, 128, 22, 24, 3, 118, 74, 10, 129, 128, 22, 24, 251, 137, 79, 193, 129, 128, 22, 24, 251, 137, 255, 191, 129, 128, 22, 24, 251, 137, 255, 191, 129, 128, 22, 24, 251, 137, 74, 193, 129, 128, 197, 31, 251, 137, 79, 193, 129, 128, 197, 31, 251, 137, 255, 191, 129, 128, 197, 31, 251, 137, 255, 191, 129, 128, 197, 31, 251, 137, 74, 193, 53, 139, 255, 255, 66, 121, 84, 213, 53, 139, 255, 255, 66, 121, 255, 255, 53, 139, 255, 255, 66, 121, 255, 191, 53, 139, 0, 0, 66, 121, 84, 213, 53, 139, 0, 0, 66, 121, 255, 191, 53, 139, 0, 0, 66, 121, 255, 191, 53, 139, 255, 255, 188, 134, 84, 213, 53, 139, 255, 255, 188, 134, 255, 255, 53, 139, 255, 255, 188, 134, 255, 255, 53, 139, 0, 0, 188, 134, 84, 213, 53, 139, 0, 0, 188, 134, 255, 255, 53, 139, 0, 0, 188, 134, 255, 191, 226, 123, 255, 255, 66, 121, 255, 255, 226, 123, 255, 255, 66, 121, 255, 191, 226, 123, 255, 255, 66, 121, 84, 213, 226, 123, 0, 0, 66, 121, 255, 191, 226, 123, 0, 0, 66, 121, 255, 191, 226, 123, 0, 0, 66, 121, 84, 213, 226, 123, 255, 255, 188, 134, 255, 255, 226, 123, 255, 255, 188, 134, 255, 255, 226, 123, 255, 255, 188, 134, 84, 213, 226, 123, 0, 0, 188, 134, 255, 255, 226, 123, 0, 0, 188, 134, 255, 191, 226, 123, 0, 0, 188, 134, 84, 213, 84, 213, 84, 213, 255, 127, 255, 255, 226, 238, 226, 238, 51, 2, 51, 130, 0, 0, 255, 127, 0, 0, 255, 127, 84, 213, 84, 213, 255, 127, 255, 255, 226, 238, 226, 238, 203, 253, 51, 130, 255, 255, 255, 127, 255, 127, 255, 191, 84, 213, 84, 213, 255, 127, 255, 255, 89, 197, 89, 197, 51, 2, 51, 130, 0, 0, 255, 127, 0, 0, 255, 127, 84, 213, 84, 213, 255, 127, 255, 255, 89, 197, 89, 197, 203, 253, 51, 130, 255, 255, 255, 127, 255, 127, 255, 191, 0, 0, 255, 127, 0, 0, 255, 127, 255, 127, 0, 0, 170, 42, 170, 42, 255, 255, 255, 127, 255, 127, 255, 191, 255, 127, 0, 0, 170, 42, 170, 42, 0, 0, 255, 127, 0, 0, 255, 127, 255, 127, 0, 0, 170, 42, 170, 42, 255, 255, 255, 127, 255, 127, 255, 191, 255, 127, 0, 0, 170, 42, 170, 42, 255, 127, 255, 255, 0, 0, 255, 127, 255, 255, 255, 255, 255, 127, 255, 255, 255, 255, 255, 255, 255, 255, 255, 127, 255, 127, 255, 255, 255, 191, 255, 191, 255, 255, 255, 127, 255, 127, 255, 255, 0, 0, 255, 127, 255, 191, 255, 191, 0, 0, 255, 127, 255, 191, 255, 191, 255, 127, 0, 0, 255, 191, 255, 191, 255, 255, 255, 127, 255, 127, 0, 0, 255, 255, 255, 255, 255, 255, 255, 127, 255, 127, 0, 0, 0, 0, 255, 127, 255, 255, 255, 255, 255, 127, 0, 0, 84, 213, 84, 213, 255, 127, 255, 255, 0, 0, 255, 127, 0, 0, 255, 127, 84, 213, 84, 213, 255, 127, 255, 255, 255, 255, 255, 127, 255, 127, 255, 191, 84, 213, 84, 213, 255, 127, 255, 255, 0, 0, 255, 127, 0, 0, 255, 127, 84, 213, 84, 213, 255, 127, 255, 255, 255, 255, 255, 127, 255, 127, 255, 191, 0, 0, 255, 127, 0, 0, 255, 127, 46, 2, 208, 125, 3, 17, 3, 17, 255, 127, 0, 0, 170, 42, 170, 42, 255, 255, 255, 127, 255, 127, 255, 191, 208, 253, 208, 125, 3, 17, 3, 17, 255, 127, 0, 0, 170, 42, 170, 42, 0, 0, 255, 127, 0, 0, 255, 127, 46, 2, 208, 125, 175, 58, 175, 58, 255, 127, 0, 0, 170, 42, 170, 42, 255, 255, 255, 127, 255, 127, 255, 191, 208, 253, 208, 125, 175, 58, 175, 58, 255, 127, 0, 0, 170, 42, 170, 42, 255, 127, 255, 255, 0, 0, 255, 127, 255, 255, 255, 255, 255, 127, 255, 255, 255, 255, 255, 255, 255, 255, 255, 127, 255, 127, 255, 255, 255, 191, 255, 191, 255, 255, 255, 127, 255, 127, 255, 255, 0, 0, 255, 127, 255, 191, 255, 191, 0, 0, 255, 127, 255, 191, 255, 191, 255, 127, 0, 0, 255, 191, 255, 191, 255, 255, 255, 127, 255, 127, 0, 0, 255, 255, 255, 255, 255, 255, 255, 127, 255, 127, 0, 0, 0, 0, 255, 127, 255, 255, 255, 255, 255, 127, 0, 0, 89, 197, 89, 197, 203, 253, 51, 130, 208, 253, 208, 125, 175, 58, 175, 58, 89, 197, 89, 197, 51, 2, 51, 130, 46, 2, 208, 125, 175, 58, 175, 58, 226, 238, 226, 238, 51, 2, 51, 130, 46, 2, 208, 125, 3, 17, 3, 17, 226, 238, 226, 238, 203, 253, 51, 130, 208, 253, 208, 125, 3, 17, 3, 17, 84, 85, 170, 170, 255, 127, 255, 63, 255, 127, 255, 127, 84, 85, 170, 170, 255, 127, 255, 127, 255, 255, 255, 127, 84, 85, 170, 170, 255, 127, 255, 63, 255, 63, 255, 191, 84, 85, 170, 170, 255, 63, 255, 191, 255, 255, 255, 127, 255, 127, 255, 63, 255, 127, 255, 127, 170, 170, 84, 85, 255, 127, 255, 127, 255, 255, 255, 127, 170, 170, 84, 85, 255, 127, 255, 63, 255, 63, 255, 191, 170, 170, 84, 85, 255, 63, 255, 191, 255, 255, 255, 127, 170, 170, 84, 85)
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_yen11")

[sub_resource type="SphereShape3D" id="SphereShape3D_v5pse"]

[node name="Player" type="RigidBody3D" groups=["Player"]]
collision_layer = 2
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
script = ExtResource("1_il8ik")
acceleration = 5.0
rideHeight = 1.3
rideSpringDamper = 0.6
rideSpringStrength = 30.0
maxSpeed = 6.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("CapsuleMesh_uyihh")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_ct8kc")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(-1, 8.74228e-08, 3.82137e-15, 0, -4.37114e-08, 1, 8.74228e-08, 1, 4.37114e-08, 0.458047, -0.751511, 0.469139)
visible = false
material_override = SubResource("StandardMaterial3D_f6ufk")
mesh = SubResource("QuadMesh_1x0ib")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="."]
transform = Transform3D(-1, 8.74228e-08, 3.82137e-15, 0, -4.37114e-08, 1, 8.74228e-08, 1, 4.37114e-08, 0.458047, -1.49234, 0.469139)
visible = false
material_override = SubResource("StandardMaterial3D_f6ufk")
mesh = SubResource("QuadMesh_1x0ib")

[node name="FloorCast" type="RayCast3D" parent="."]
target_position = Vector3(0, -1.5, 0)

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("3_d387y")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("4_1g4a4")

[node name="Move" type="Node" parent="StateMachine"]
script = ExtResource("5_3ufue")

[node name="Creaming" type="Node" parent="StateMachine"]
script = ExtResource("6_wwqe3")

[node name="Jump" type="Node" parent="StateMachine"]
script = ExtResource("6_3r524")

[node name="Boost" type="Node" parent="StateMachine"]
script = ExtResource("7_bdueu")

[node name="Hover" type="Node" parent="StateMachine"]
script = ExtResource("8_fmeui")

[node name="WheelAssem" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.282962, 0)
script = ExtResource("9_ufuem")

[node name="Suspension" type="MeshInstance3D" parent="WheelAssem"]
transform = Transform3D(-6.77527e-09, 0, 0.155, 0, 0.17, 0, -0.155, 0, -6.77527e-09, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_245os")
mesh = SubResource("ArrayMesh_uis14")
skeleton = NodePath("")

[node name="WheelContainer" type="Node3D" parent="WheelAssem"]

[node name="Wheel2" parent="WheelAssem/WheelContainer" instance=ExtResource("10_wk4b8")]
transform = Transform3D(-6.55671e-09, 0, 0.15, 0, 0.15, 0, -0.15, 0, -6.55671e-09, -0.372195, 0, -0.340779)

[node name="Wheel3" parent="WheelAssem/WheelContainer" instance=ExtResource("10_wk4b8")]
transform = Transform3D(-6.55671e-09, 0, 0.15, 0, 0.15, 0, -0.15, 0, -6.55671e-09, -0.372195, 0, 0.334728)

[node name="Wheel4" parent="WheelAssem/WheelContainer" instance=ExtResource("10_wk4b8")]
transform = Transform3D(-6.55671e-09, 0, 0.15, 0, 0.15, 0, -0.15, 0, -6.55671e-09, 0.368147, 0, -0.340779)

[node name="Wheel5" parent="WheelAssem/WheelContainer" instance=ExtResource("10_wk4b8")]
transform = Transform3D(-6.55671e-09, 0, 0.15, 0, 0.15, 0, -0.15, 0, -6.55671e-09, 0.368147, 0, 0.334728)

[node name="ActiveHitbox" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.919909)
collision_layer = 8
collision_mask = 4
monitoring = false
script = ExtResource("11_x3o7n")

[node name="CollisionShape3D" type="CollisionShape3D" parent="ActiveHitbox"]
shape = SubResource("SphereShape3D_v5pse")

[connection signal="body_entered" from="ActiveHitbox" to="ActiveHitbox" method="_on_body_entered"]
